# sparse-boolean-matrix-multiplication

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile.devel  README.md
.github/workflows/: main.yml
cmake/: FindBoost.cmake
lib/: bmm_lib.cpp  bmm_lib.h  coo.cpp  coo.hpp  definitions.h.in  mmio.cpp  mmio.h
src/: sbmm_sequential.cpp
